# emacs-test-simple

./: .gitignore  .travis.yml  AUTHORS  Carton  Cask  ChangeLog  INSTALL  Makefile.am  NEWS  README.md  README.textile  THANKS  autogen.sh  configure.ac  elisp-comp  install-from-git.sh  run-travis-ci.sh  test-simple.el
example/: gcd-tests.el  gcd.el  test-gcd.el
test/: Makefile.am  fns.el  test-basic.el  test-buffer.el  test-fns.el  test-no-clear.el  test-simple-basic.el
